Dodana mogucnost zatrazivanja produzetka
